# esp_rust

./: .gitignore  CLAUDE.md  Cargo.toml  GOAL.md  LIST.md  README.md  REQUIREMENT.md  build.rs  log.md  rust-toolchain.toml
.cargo/: config.toml
docs/: DX-LR32-433T22D模组_串口UART_应用指导_unlocked.docx  demo-runbook.md
scripts/: check-demo.sh  monitor.sh  run-release.sh
src/: demo.rs  demo_log.rs  hardware.rs  lib.rs  main.rs  protocol.rs  relay.rs  role.rs  sensors.rs  tdma.rs  transport.rs
