[package]
name = "esp32s3-n16r8-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.10.0"
embassy-sync = "0.8.0"
embassy-time = "0.5.0"
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
esp-rtos = { version = "0.3.0", features = ["esp32s3", "embassy"] }
heapless = "0.9"
log = "0.4"
ssd1306 = "0.10.0"
